--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "React bot for webpage",
   "main": "index.js",
   "engines": {
-    "node":"14.15.5",
-    "npm":"6.14.11"
+    "node": "14.15.5",
+    "npm": "6.14.11"
   },
-  "scripts": { 
+  "scripts": {
     "start": " node index.js",
+    "backend": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shubhendu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dialogflow": "^1.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
